--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
@@ -12,34 +13,70 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/information"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.02"
-                android:text="お知らせ"
+                android:text="実行委員会企画からのお知らせ"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
-            <com.chibafes.chibafes55.MeasureListView
-                android:id="@+id/listview1"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent"
+                android:layout_weight="0.02"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageButton7"
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@mipmap/ic_launcher" />
+
+                <ImageButton
+                    android:id="@+id/imageButton4"
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@mipmap/ic_launcher" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.02"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageButton5"
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@mipmap/ic_launcher" />
+
+                <ImageButton
+                    android:id="@+id/imageButton6"
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@mipmap/ic_launcher" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/news"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.02"
-                android:text="新着情報"
+                android:text="最新情報"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
             <com.chibafes.chibafes55.MeasureListView
                 android:id="@+id/listview2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.02" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
 
