--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,71 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/buttonBack"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:background="@null"
-            android:onClick="onClickButtonBack"
-            android:padding="4dp"
-            android:scaleType="fitStart"
-            android:src="?android:attr/homeAsUpIndicator"
-            app:srcCompat="?android:attr/homeAsUpIndicator" />
-
-        <TextView
-            android:id="@+id/Title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="SETTING"
-            android:textAlignment="center" />
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:layout_weight="3"
-            android:background="@null"
-            android:padding="4dp"
-            android:scaleType="fitEnd"
-            app:srcCompat="@null" />
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_weight="0.08"
+        android:text="設定" />
 
     <Button
         android:id="@+id/button_belong"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="所属の選択" />
 
     <Button
         android:id="@+id/button_fontsize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="文字サイズ" />
 
     <Button
         android:id="@+id/button_about_app"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClickButtonAbout"
-        android:text="Button" />
+        android:text="このアプリについて" />
 
     <Button
         android:id="@+id/button_to_web"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClickButtonToWeb"
-        android:text="Button" />
+        android:text="千葉大祭ホームページはこちら" />
 </LinearLayout>
