--- a/app/src/main/res/layout/activity_mainmenu.xml
+++ b/app/src/main/res/layout/activity_mainmenu.xml
@@ -37,7 +37,7 @@
             android:onClick="onClickButtonSetting"
             android:padding="4dp"
             android:scaleType="fitEnd"
-            app:srcCompat="@drawable/icon_setting" />
+            android:src="@drawable/icon_setting" />
     </LinearLayout>
 
     <LinearLayout
@@ -53,7 +53,7 @@
             android:background="@null"
             android:onClick="onClickButtonInfo"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/icon_info" />
+            android:src="@drawable/icon_info" />
 
         <ImageButton
             android:id="@+id/buttonMenuSearch"
@@ -63,7 +63,7 @@
             android:background="@null"
             android:onClick="onClickButtonSearch"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/icon_search" />
+            android:src="@drawable/icon_search" />
 
         <ImageButton
             android:id="@+id/buttonMenuTimeTable"
@@ -73,7 +73,7 @@
             android:background="@null"
             android:onClick="onClickButtonTimeTable"
             android:scaleType="fitCenter"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:src="@drawable/icon_timetable" />
 
         <ImageButton
             android:id="@+id/buttonMenuMap"
@@ -83,7 +83,7 @@
             android:background="@null"
             android:onClick="onClickButtonMap"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/icon_map" />
+            android:src="@drawable/icon_map" />
 
         <ImageButton
             android:id="@+id/buttonMenuHappi"
@@ -93,7 +93,7 @@
             android:background="@null"
             android:onClick="onClickButtonHappi"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/icon_happi2" />
+            android:src="@drawable/icon_happi2" />
     </LinearLayout>
 
     <FrameLayout
