--- a/app/src/main/res/layout/activity_firstrun.xml
+++ b/app/src/main/res/layout/activity_firstrun.xml
@@ -7,10 +7,11 @@
 
 
     <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/toolbar" />
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:visibility="gone" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
