新着情報の表示修正、タップ時の詳細表示実装、企画検索の検索ウィンドウ用レイアウトファイルの名称変更

--- a/app/src/main/res/layout/listitem_info.xml
+++ b/app/src/main/res/layout/listitem_info.xml
@@ -8,12 +8,17 @@
         android:id="@+id/textTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_margin="4dp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:text="TextView"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/textTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+        android:layout_marginBottom="4dp"
         android:text="TextView" />
 </LinearLayout>
