--- a/app/src/main/res/layout/activity_happi.xml
+++ b/app/src/main/res/layout/activity_happi.xml
@@ -22,9 +22,12 @@
             android:id="@+id/textSerif"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="8dp"
             android:layout_weight="1"
             android:gravity="center_vertical|center"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -37,8 +40,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/ic_launcher"
-                app:srcCompat="@drawable/happi4" />
+                android:src="@drawable/happi4" />
 
             <Button
                 android:id="@+id/buttonHappi"
@@ -63,7 +65,7 @@
             android:background="@null"
             android:padding="8dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/happi_uchiwa" />
+            android:src="@drawable/happi_uchiwa" />
 
         <ImageButton
             android:id="@+id/imageButton2"
@@ -73,7 +75,7 @@
             android:background="@null"
             android:padding="8dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/happi_uchiwa" />
+            android:src="@drawable/happi_uchiwa" />
 
         <ImageButton
             android:id="@+id/imageButton"
@@ -83,7 +85,7 @@
             android:background="@null"
             android:padding="8dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/happi_uchiwa" />
+            android:src="@drawable/happi_uchiwa" />
 
     </LinearLayout>
 
