--- a/app/src/main/res/layout/activity_kikakulist.xml
+++ b/app/src/main/res/layout/activity_kikakulist.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/icon_search" />
+        android:src="@drawable/icon_search" />
 
     <ListView
         android:id="@+id/listSearchResult"
