--- a/app/src/main/res/layout/activity_mainmenu.xml
+++ b/app/src/main/res/layout/activity_mainmenu.xml
@@ -7,6 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:color/holo_orange_light"
         android:orientation="horizontal">
 
         <ImageButton
@@ -25,7 +27,9 @@
             android:layout_weight="1"
             android:gravity="center_vertical|center_horizontal"
             android:text="TITLE"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/buttonMenuSetting"
