--- a/app/src/main/res/layout/listitem_kikaku.xml
+++ b/app/src/main/res/layout/listitem_kikaku.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:padding="4dp"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:layout_width="match_parent"
