--- a/app/src/main/res/layout/window_info_detail.xml
+++ b/app/src/main/res/layout/window_info_detail.xml
@@ -24,7 +24,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/buttonClose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+            android:src="@android:drawable/ic_menu_close_clear_cancel" />
     </LinearLayout>
 
     <TextView
