--- a/app/src/main/res/layout/window_kikakusearch.xml
+++ b/app/src/main/res/layout/window_kikakusearch.xml
@@ -15,7 +15,7 @@
                 android:id="@+id/buttonSearchClose"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+                android:src="@android:drawable/ic_menu_close_clear_cancel" />
 
             <TextView
                 android:id="@+id/textView6"
