--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -9,8 +9,10 @@
         android:layout_height="match_parent"
         android:layout_weight="3"
         android:background="@android:color/black"
+        android:orientation="horizontal"
         android:padding="1dp">
 
+        <!--android:visibility="gone"-->
         <!--
             <com.qozix.tileview.TileView
                 android:id="@+id/imageMap"
@@ -19,4 +21,10 @@
                 android:background="@android:color/white"/>
                 -->
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="3" />
 </LinearLayout>
