iOS版から画像データの移行、起動〜お知らせ画面までの調整

--- a/app/src/main/res/layout/window_kikakudetail.xml
+++ b/app/src/main/res/layout/window_kikakudetail.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/imagePRCut"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                app:srcCompat="@drawable/dummy" />
+                android:src="@null" />
 
             <TextView
                 android:id="@+id/textLocation"
