--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -18,63 +18,94 @@
             <TextView
                 android:id="@+id/information"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_weight="0.02"
-                android:text="実行委員会企画からのお知らせ"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+                android:background="@color/colorTitleBar"
+                android:gravity="center_vertical"
+                android:paddingLeft="8dp"
+                android:text="@string/InfoKikakuTitle"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_weight="0.02"
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/imageButton7"
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
+                    android:id="@+id/buttonKikaku1"
+                    android:layout_width="160dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
                     android:layout_weight="1"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    android:background="@null"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/icon_button_cosplay" />
 
                 <ImageButton
-                    android:id="@+id/imageButton4"
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
+                    android:id="@+id/buttonKikaku2"
+                    android:layout_width="160dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
                     android:layout_weight="1"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    android:background="@null"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/icon_button_grandprix" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="4dp"
                 android:layout_weight="0.02"
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/imageButton5"
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
+                    android:id="@+id/buttonKikaku3"
+                    android:layout_width="160dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
                     android:layout_weight="1"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    android:background="@null"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/icon_button_goods" />
 
                 <ImageButton
-                    android:id="@+id/imageButton6"
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
+                    android:id="@+id/buttonKikaku4"
+                    android:layout_width="160dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
                     android:layout_weight="1"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    android:background="@null"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/icon_button_kikaku" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/news"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.02"
-                android:text="最新情報"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+                android:layout_height="40dp"
+                android:background="@color/colorTitleBar"
+                android:gravity="center_vertical"
+                android:paddingLeft="8dp"
+                android:text="@string/InfoNewsTitle"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textSize="20sp" />
 
             <com.chibafes.chibafes55.MeasureListView
-                android:id="@+id/listview2"
+                android:id="@+id/tableNewsList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
