--- a/app/src/main/res/layout/window_info_detail.xml
+++ b/app/src/main/res/layout/window_info_detail.xml
@@ -8,7 +8,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_light"
+        android:background="@color/colorInfoTitleBar"
         android:orientation="horizontal">
 
         <TextView
@@ -24,6 +24,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/buttonClose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             android:src="@android:drawable/ic_menu_close_clear_cancel" />
     </LinearLayout>
 
@@ -33,7 +34,8 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="wrap_content"
         android:layout_marginRight="6dp"
         android:gravity="right"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="15sp" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -43,13 +45,14 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/textMessage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
                 android:text="TextView"
-                android:textSize="16sp" />
+                android:textSize="17sp" />
         </LinearLayout>
     </ScrollView>
 
