--- a/app/src/main/res/layout/window_timetable.xml
+++ b/app/src/main/res/layout/window_timetable.xml
@@ -41,7 +41,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_weight="1"
-                android:src="@drawable/dummy" />
+                android:src="@null" />
 
             <TextView
                 android:id="@+id/textTime"
