--- a/app/src/main/res/layout/activity_mainmenu.xml
+++ b/app/src/main/res/layout/activity_mainmenu.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginBottom="8dp"
-        android:background="@android:color/holo_orange_light"
+        android:background="@android:color/white"
         android:orientation="horizontal">
 
         <ImageButton
