--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -22,9 +22,11 @@
                 -->
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView5"
+    <ListView
+        android:id="@+id/listSpot"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3" />
+        android:layout_height="match_parent"
+        android:layout_weight="6"
+        android:paddingBottom="60dp" />
+
 </LinearLayout>
