--- a/app/src/main/res/layout/listitem_kikaku.xml
+++ b/app/src/main/res/layout/listitem_kikaku.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    android:minHeight="100dp"
     android:orientation="horizontal">
 
 
@@ -11,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:padding="4dp"
-        android:src="@mipmap/ic_launcher" />
+        android:padding="4dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
