--- a/app/src/main/res/layout/listitem_timetable.xml
+++ b/app/src/main/res/layout/listitem_timetable.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    android:minHeight="100dp"
     android:orientation="horizontal">
 
 
@@ -11,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:padding="4dp"
-        android:src="@mipmap/ic_launcher" />
+        android:padding="4dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,25 +22,19 @@
         android:weightSum="3">
 
         <TextView
-            android:id="@+id/textGroupName"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="団体名" />
-
-        <TextView
-            android:id="@+id/textGroupSummary"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="企画概要" />
-
-        <TextView
             android:id="@+id/textGroupTime"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="時間" />
+
+        <TextView
+            android:id="@+id/textGroupName"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="団体名"
+            android:textAlignment="center" />
 
     </LinearLayout>
 
