--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,16 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorTitleBar">#ffaa66</color>
     <color name="colorInfoTitleBar">#E8E579</color>
+    <color name="colorSearchTitle">#8EC331</color>
+    <color name="colorSearchCaption">#ffaa66</color>
+    <color name="colorSearchButton">#E8E579</color>
+    <color name="colorTabSearch">#F2F4BB</color>
+    <color name="colorTabFavorite">#B5CCF4</color>
+    <color name="colorButton">#F19837</color>
+    <color name="colorButtonLINE">#5ABA2B</color>
+    <color name="colorTabDay1">#F4B9B9</color>
+    <color name="colorTabDay2">#C7CFFC</color>
+    <color name="colorTabDay3">#C6F9D1</color>
+    <color name="colorTabDay4">#E9C6FC</color>
+    <color name="colorTabCheck">#FBFCC7</color>
 </resources>
