--- a/app/src/main/res/layout/activity_firstrun2.xml
+++ b/app/src/main/res/layout/activity_firstrun2.xml
@@ -8,6 +8,6 @@
         android:id="@+id/imageTutorial"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:background="@drawable/back_repeat" />
 
 </LinearLayout>
