--- a/app/src/main/res/layout/activity_kikakuinfo.xml
+++ b/app/src/main/res/layout/activity_kikakuinfo.xml
@@ -56,7 +56,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <ImageView
                     android:layout_width="160dp"
@@ -73,24 +73,35 @@
 
                 <Button
                     android:id="@+id/buttonKikakuInfo1"
-                    android:onClick="onClickKikakuInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:background="@color/colorButton"
+                    android:onClick="onClickKikakuInfo"
                     android:padding="10dp"
                     android:text="@string/KikakuInfoButton1"
                     android:textSize="19dp" />
 
                 <Button
                     android:id="@+id/buttonKikakuInfo2"
-                    android:onClick="onClickKikakuInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:background="@color/colorButton"
+                    android:onClick="onClickKikakuInfo"
                     android:padding="10dp"
                     android:text="@string/KikakuInfoButton2"
+                    android:textSize="19dp" />
+
+                <Button
+                    android:id="@+id/buttonKikakuInfo12"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:background="@color/colorButton"
+                    android:onClick="onClickKikakuInfo"
+                    android:padding="10dp"
+                    android:text="@string/KikakuInfoButton3"
                     android:textSize="19dp" />
             </LinearLayout>
 
