--- a/app/src/main/res/layout/activity_timetable.xml
+++ b/app/src/main/res/layout/activity_timetable.xml
@@ -68,49 +68,57 @@
             android:textSize="16sp" />
     </LinearLayout>
 
-    <ScrollView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <LinearLayout
-            android:id="@+id/viewTableBase"
+        <ScrollView
+            android:id="@+id/scrollTimeTable"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView3"
+            <LinearLayout
+                android:id="@+id/viewTableBase"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="12dp"
-                android:text="ステージ"
-                android:textSize="18sp" />
+                android:orientation="vertical">
 
-            <com.chibafes.chibafes55.MeasureListView
-                android:id="@+id/list_timetable"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="12dp"
+                    android:text="ステージ"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="12dp"
-                android:text="ストリートパフォーマンス"
-                android:textSize="18sp" />
+                <com.chibafes.chibafes55.MeasureListView
+                    android:id="@+id/list_timetable"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
-            <com.chibafes.chibafes55.MeasureListView
-                android:id="@+id/list_timetable2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="12dp"
+                    android:text="ストリートパフォーマンス"
+                    android:textSize="18sp" />
 
-        </LinearLayout>
-    </ScrollView>
+                <com.chibafes.chibafes55.MeasureListView
+                    android:id="@+id/list_timetable2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/viewNoFavorite"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/TimeTableNoCheck" />
+            </LinearLayout>
+        </ScrollView>
 
+        <TextView
+            android:id="@+id/viewNoFavorite"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorTabCheck"
+            android:textSize="17dp"
+            android:padding="16dp"
+            android:gravity="center"
+            android:text="@string/TimeTableNoCheck" />
+    </FrameLayout>
 </LinearLayout>
