--- a/app/src/main/res/layout/listitem_kikaku.xml
+++ b/app/src/main/res/layout/listitem_kikaku.xml
@@ -26,14 +26,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="団体名" />
+            android:text="団体名"
+            android:textSize="17sp" />
 
         <TextView
             android:id="@+id/textGroupSummary"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="企画概要" />
+            android:text="企画概要"
+            android:textSize="17sp" />
 
 
     </LinearLayout>
