--- a/app/src/main/res/layout/listitem_timetable.xml
+++ b/app/src/main/res/layout/listitem_timetable.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    android:background="@android:color/white"
     android:minHeight="100dp"
     android:orientation="horizontal">
 
@@ -26,7 +27,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="時間" />
+            android:text="時間"
+            android:textSize="17sp" />
 
         <TextView
             android:id="@+id/textGroupName"
@@ -34,7 +36,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="団体名"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="17sp" />
 
     </LinearLayout>
 
