--- a/app/src/main/res/layout/window_timetable.xml
+++ b/app/src/main/res/layout/window_timetable.xml
@@ -5,19 +5,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_light"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/buttonClose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_close_clear_cancel" />
-    </LinearLayout>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -25,49 +12,89 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/textName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="6dp"
-                android:layout_weight="1"
+                android:background="@color/colorSearchButton"
+                android:gravity="center"
+                android:padding="12dp"
                 android:text="TextView"
-                android:textSize="20sp" />
+                android:textSize="17sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="12dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="TextView"
+                    android:textSize="17sp" />
+
+                <ImageButton
+                    android:id="@+id/buttonFavorite"
+                    android:layout_width="52dp"
+                    android:layout_height="52dp"
+                    android:background="@null"
+                    android:padding="4dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/icon_favo" />
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/imagePRCut"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_weight="1"
+                android:layout_height="168dp"
                 android:src="@null" />
-
-            <TextView
-                android:id="@+id/textTime"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="8dp"
-                android:layout_weight="1"
-                android:text="TextView"
-                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textSummary"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="TextView" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:text="TextView"
-                android:textSize="16sp" />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageGenre1"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/icon_genre1" />
+
+                <ImageView
+                    android:id="@+id/imageGenre2"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/icon_genre1" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/textDetail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="8dp"
-                android:layout_weight="1"
-                android:text="TextView"
-                android:textSize="16sp" />
+                android:layout_margin="16dp"
+                android:text="TextView" />
+
         </LinearLayout>
     </ScrollView>
 
